--- a/Math-Aid/About.html
+++ b/Math-Aid/About.html
@@ -6,23 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css">
     <!-- Bootstrap CSS -->
+    <script src="https://kit.fontawesome.com/db2059466e.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
 
     <title>Math-Aid Academy (PTY) LTD</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg">
           <div class="container-fluid">
-            <a class="navbar-brand" href="#">PlaceYourLogo</a>
+            <a class="navbar-brand " href="/index.html"><img src="./pictures/Logo.png" class="Logo"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
               <ul class="navbar-nav ml-auto">
-                <a class="nav-link" aria-current="page" href="./index.html">Home</a>
-                <a class="nav-link active" aria-current="page" href="./About.html">About</a>
+                <a class="nav-link" href="index.html">Home</a>
+                <a class="nav-link active" aria-current="page" href="./About">About</a>
                 <a class="nav-link" href="./Contact.html">Contact</a>
+                <a class="nav-link" href="./Booking.html">Bookings</a>
               </ul>
             </div>
           </div>
@@ -31,22 +33,27 @@
     <div class="row">
       <div class="col-sm-6">
           <div class="card-body">
-              <h5 class="card-title">About Us</h5>
+              <h4 class="card-title">About Us</h4>
               <p class="card-text"> Mathematics is a challenging issue in SA, due to the perception embedded in a student's mind that mathematics is hard,
                 and this leads tostudents having a negative attitude towards it. Math-Aid does not only assist students with improving their marks but 
                 it also aims to change the attitudethat students have towards mathematics. Math-Aid aims to provide students with a mind concept that makes maths
                 exciting and achievable. A posite attitude will assist leaners to be more earger to learn and excel in maths.
               </p>
 
-              <h5 class="card-title">Vision</h5>
+              <h4 class="card-title">Vision</h4>
               <p>
                   Math-Aid aims to simplify maths and make it reletable to students.
               </p>
-              <h5 class="card-title">Mission</h5>
+              <h4 class="card-title">Mission</h4>
               <p>
-                ********************************
+                Stimulate student's interest and apreciation of maths through effective teaching.<br>
+                Provide training through the use of reliable mathematical books.<br>
+                Equip student with problem solving skills via group interaction or one on one session.<br>
+                Providing a learning environment that enables students to practice their maths skills.<br>
+                Transforming the fearful attitude that learners have towards maths to a positive and exciting one.<br>
+                Offering time and stress management to help students function better.
               </p>
-              <a href="./index.html" class="btn btn-primary">Back</a>
+              <a href="/" class="btn btn-light text-dark">Back</a>
           </div>
       </div>
             <br id="Sub-section">
@@ -54,13 +61,47 @@
             <div class="card-body">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                      <img src="./pictures/2.jpg" class="mainImg">
+                      <img src="./pictures/Logo.png" class="mainImg">
                     </div>
                   </div>
             </div>
           </div>
       </div>
     </section>
+    <footer class="bg-white">
+      <div class="row pt-5 bg-light">
+        <div class="col-sm-4">
+    
+            <div class="card-body text-center">
+              <h5 class="card-title">Services</h5>
+              <p class="cardt">Grade 8-12(CAPS/IEB)</p>
+              <p class="cardt">Matric rewrite/upgrade</p>
+              <p class="cardt">Tertiatry Level</p>
+              <p class="cardt">N1 to N6 Mathematics</p>
+              <p class="cardt">NCV level 2-4</p>
+            </div>
+          
+        </div>
+        <div class="col-sm-4">
+          <div class="card-body text-center">
+            <h5 class="card-title">Duration: </h5>
+            <p class="cardT"> Mon- Fri : 60min - 90min</p>
+          </div>
+        </div>
+        <div class="col-sm-4">
+          <div class="card-body text-center">
+            <h5 class="card-title">Contact details</h5>
+            <p class="card-text">+27 64 753 5622 | +27 81 731 9648</p>
+            <a href="https://www.facebook.com/@MathAidAcademy"><i class="fab fa-facebook fa-3x"></i></a>
+            <a href="https://wa.me/message/"><i class="fab fa-whatsapp fa-3x text-success"></i></a>
+          </div>
+        </div>
+       </div>
+       <div class="footerSub text-center">
+          <a class="text-dark" href=""><small>All rights reserved for Math-Aid academy (PTY) LTD</small></a>
+          <p class="text-dark" href=""><small>Copyright © | Math-Aid Academy (PTY) LTD</small></p>
+        </div>
+    </footer>
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
