--- a/Math-Aid/Booking.html
+++ b/Math-Aid/Booking.html
@@ -15,7 +15,7 @@
   <body>
     <nav class="navbar navbar-expand-lg ">
           <div class="container-fluid">
-            <a class="navbar-brand" href="/index.html"><img src="./pictures/Logo.png" class="Logo"></a>
+            <a class="navbar-brand" href="/"><img src="./pictures/Logo.png" class="Logo"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
@@ -32,27 +32,53 @@
   <section class="contactSection">
     <div class="newS p-5">
       <div class="row p-5">
-        <div class="subContact">
-            <h1>Contact us now!</h1>
-            <p class="card-text text-dart ">For more information, you can contact us on the following form, and we will get back to you as soon as possible.</p>
-            <br>
-            <br>
-        </div>
-        <div class="col-sm-7 bg-light p-5">
-            <div class="card-body " id="cardLeft">
-               <form method="post">
-                    <input type="text" name="name" class="form-control" id="exampleFormControlInput1" placeholder="Name" required>
-                    <input type="text" name="subject" class="form-control" id="exampleFormControlInput1" placeholder="Subject " required>
-                    <input type="email " name="email" class="form-control" id="exampleFormControlInput1" placeholder="Email " required>
-                    <input type="number" name="contact" class="form-control" id="exampleFormControlInput1" placeholder="Cell No" min="0" required>
-                    <textarea type="text" name="message" class="form-control" id="exampleFormControlTextarea1" rows="1 " placeholder="Message" required></textarea>
-                    <button type="submit" name="sendEmail" class="btn btn-secondary mt-3">Send email</button>
-               </form>
+        <div class="col-sm-7 bg-light">
+            <div class="subContact p-5 m-0">
+                <h2 class="text-dark">Booked sessions </h2>
+            </div>
+            <div class="card-body ">
+              <table class="table">
+                <thead>
+                  <tr>
+                    <th scope="col">Id</th>
+                    <th scope="col">Module</th>
+                    <th scope="col">Date/Time</th>
+                    <th class="text-center" scope="col">Cancel</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <th scope="row">1</th>
+                    <td>Matric rewrite/upgrade</td>
+                    <td>05/21/2022 12:57 PM</td>
+                    <td class="text-center"><i class="fas fa-trash text-danger"></i></td>
+                  </tr>
+                </tbody>
+              </table>
             </div>
         </div>
         <div class="col-sm-5">
             <div class="card-body" id="IconContact">
-                <img src="./pictures/Logo.png" width="100%" alt="">
+              <div class="subContact p-3 m-0">
+                <h2 class="text-light">Study Materials</h2>
+            </div>
+              <ol class="list-group list-group-numbered">
+                <li class="list-group-item d-flex justify-content-between align-items-start">
+                  <div class="ms-2 me-auto">
+                    <div class="fw-bold">Physical-Sciences</div>
+                    P1-May-June-2021-Eng
+                  </div>
+                  <span class="badge bg-secondary rounded-pill"><a href="./materials/Physical-Sciences-P1-May-June-2021-Eng.pdf" download rel="noopener noreferrer" target="_blank">Downlod <i class="fas fa-file-pdf"></i></a></span>
+                </li>
+                <li class="list-group-item d-flex justify-content-between align-items-start">
+                  <div class="ms-2 me-auto">
+                    <div class="fw-bold">Physical-Sciences</div>
+                    P1-May-June-2021-MG-Eng-Afr-Memo
+                  </div>
+                  <span class="badge bg-secondary rounded-pill"><a href="./materials/Physical-Sciences-P1-May-June-2021-MG-Eng-Afr.pdf" download rel="noopener noreferrer" target="_blank">Downlod <i class="fas fa-file-pdf"></i></a></span>
+                </li>
+
+              </ol>
             </div>
         </div>
     </div>
