--- a/Math-Aid/Booksession.html
+++ b/Math-Aid/Booksession.html
@@ -15,7 +15,7 @@
   <body>
     <nav class="navbar navbar-expand-lg ">
           <div class="container-fluid">
-            <a class="navbar-brand" href="/index.html"><img src="./pictures/Logo.png" class="Logo"></a>
+            <a class="navbar-brand" href="/"><img src="./pictures/Logo.png" class="Logo"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
@@ -32,27 +32,31 @@
   <section class="contactSection">
     <div class="newS p-5">
       <div class="row p-5">
-        <div class="subContact">
-            <h1>Contact us now!</h1>
-            <p class="card-text text-dart ">For more information, you can contact us on the following form, and we will get back to you as soon as possible.</p>
-            <br>
-            <br>
-        </div>
-        <div class="col-sm-7 bg-light p-5">
-            <div class="card-body " id="cardLeft">
+        <div class="col-sm-7 bg-light">
+            <div class="subContact p-5 m-0">
+                <h2 class="text-dark">Session Booking </h2>
+            </div>
+            <div class="card-body ">
                <form method="post">
-                    <input type="text" name="name" class="form-control" id="exampleFormControlInput1" placeholder="Name" required>
-                    <input type="text" name="subject" class="form-control" id="exampleFormControlInput1" placeholder="Subject " required>
-                    <input type="email " name="email" class="form-control" id="exampleFormControlInput1" placeholder="Email " required>
-                    <input type="number" name="contact" class="form-control" id="exampleFormControlInput1" placeholder="Cell No" min="0" required>
-                    <textarea type="text" name="message" class="form-control" id="exampleFormControlTextarea1" rows="1 " placeholder="Message" required></textarea>
-                    <button type="submit" name="sendEmail" class="btn btn-secondary mt-3">Send email</button>
+                    <select class="form-select" aria-label="Default select example">
+                        <option selected>Select a lesson</option>
+                        <option value="1">Grade 8-12(CAPS/IEB)</option>
+                        <option value="2">Matric rewrite/upgrade</option>
+                        <option value="3">Tertiatry Level</option>
+                        <option value="4">N1 to N6 Mathematics</option>
+                        <option value="5">NCV level 2-4</option>
+                    </select>
+                    <hr>
+                    <label class="p-2" for="date"><i class="fa-solid fa-calendar-check"></i> Session date</label>
+                    <input type="datetime-local" name="date" class="form-control" id="exampleFormControlInput1" placeholder="Name" required>
+                    <button type="submit" name="sendEmail" class="btn btn-secondary mt-3">Book Now</button>
                </form>
             </div>
         </div>
-        <div class="col-sm-5">
-            <div class="card-body" id="IconContact">
-                <img src="./pictures/Logo.png" width="100%" alt="">
+        <div class="col-sm-5 pt-3">
+            <div class="card-body text-center pt-5" id="IconContact">
+                <i class="fa-solid fa-calendar-check fa-10x text-light"></i>
+                <h2 class="p-3">Tutorial Session</h2>
             </div>
         </div>
     </div>
