--- a/Math-Aid/Signup.html
+++ b/Math-Aid/Signup.html
@@ -21,7 +21,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
               <ul class="navbar-nav ml-auto">
-                <a class="nav-link" href="/index.html">Home</a>
+                <a class="nav-link" href="/">Home</a>
                 <a class="nav-link" href="./About.html">About</a>
                 <a class="nav-link active" aria-current="page" href="./Contact.html">Contact</a>
                 <a class="nav-link" href="./Booking.html">Bookings</a>
@@ -33,7 +33,7 @@
     <div class="newS p-5">
       <div class="row p-5">
         <div class="subContact">
-            <h1>Contact us now!</h1>
+            <h1>Sign Up Section!</h1>
             <p class="card-text text-dart ">For more information, you can contact us on the following form, and we will get back to you as soon as possible.</p>
             <br>
             <br>
@@ -42,17 +42,18 @@
             <div class="card-body " id="cardLeft">
                <form method="post">
                     <input type="text" name="name" class="form-control" id="exampleFormControlInput1" placeholder="Name" required>
-                    <input type="text" name="subject" class="form-control" id="exampleFormControlInput1" placeholder="Subject " required>
+                    <input type="text" name="subject" class="form-control" id="exampleFormControlInput1" placeholder="Surname " required>
                     <input type="email " name="email" class="form-control" id="exampleFormControlInput1" placeholder="Email " required>
-                    <input type="number" name="contact" class="form-control" id="exampleFormControlInput1" placeholder="Cell No" min="0" required>
-                    <textarea type="text" name="message" class="form-control" id="exampleFormControlTextarea1" rows="1 " placeholder="Message" required></textarea>
-                    <button type="submit" name="sendEmail" class="btn btn-secondary mt-3">Send email</button>
+                    <input type="password" name="contact" class="form-control" id="exampleFormControlInput1" placeholder="Password" min="0" required>
+                    <input type="password" name="contact" class="form-control" id="exampleFormControlInput1" placeholder="Confirm Password" min="0" required>
+                    <button type="submit" name="sendEmail" class="btn btn-secondary mt-3">Submit Info</button>
                </form>
             </div>
         </div>
         <div class="col-sm-5">
-            <div class="card-body" id="IconContact">
-                <img src="./pictures/Logo.png" width="100%" alt="">
+            <div class="card-body text-center" id="IconContact">
+                <i class="fa-solid fa-user fa-10x pt-5 text-light"></i><br>
+                <h1>User Registration</h1>
             </div>
         </div>
     </div>
