--- a/Math-Aid/Booking.html
+++ b/Math-Aid/Booking.html
@@ -24,7 +24,7 @@
                 <a class="nav-link" href="/index.html">Home</a>
                 <a class="nav-link" href="./About.html">About</a>
                 <a class="nav-link active" aria-current="page" href="./Contact.html">Contact</a>
-                <a class="nav-link" href="./Booking.html">Bookings</a>
+                <a class="nav-link" id="bookingLink" href="./Booking.html">Bookings</a>
               </ul>
             </div>
           </div>
@@ -124,7 +124,7 @@
     </div>
   </footer>
     <!-- Optional JavaScript; choose one of the two! -->
-
+    <script src="./main.js"></script>
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
