--- a/Math-Aid/Booksession.html
+++ b/Math-Aid/Booksession.html
@@ -24,7 +24,7 @@
                 <a class="nav-link" href="/index.html">Home</a>
                 <a class="nav-link" href="./About.html">About</a>
                 <a class="nav-link active" aria-current="page" href="./Contact.html">Contact</a>
-                <a class="nav-link" href="./Booking.html">Bookings</a>
+                <a class="nav-link" id="bookingLink" href="./Booking.html">Bookings</a>
               </ul>
             </div>
           </div>
@@ -105,7 +105,7 @@
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-
+    <script src="./main.js"></script>
     <!-- Option 2: Separate Popper and Bootstrap JS -->
     <!--
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
