--- a/Math-Aid/Contact.html
+++ b/Math-Aid/Contact.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
 
     <title>Math-Aid Academy (PTY) LTD</title>
+
   </head>
   <body>
     <nav class="navbar navbar-expand-lg ">
@@ -24,11 +25,17 @@
                 <a class="nav-link" href="/index.html">Home</a>
                 <a class="nav-link" href="./About.html">About</a>
                 <a class="nav-link active" aria-current="page" href="./Contact.html">Contact</a>
-                <a class="nav-link" href="./Booking.html">Bookings</a>
+                <a class="nav-link" id="bookingLink" href="./Booking.html">Bookings</a>
               </ul>
             </div>
           </div>
     </nav>
+    <div id="mainAlert">
+      <div class="alert alert-success alert-dismissible fade show" role="alert">
+        <strong><i class="fa-solid fa-envelope"></i> Alert !</strong> Email sent successfully.
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+      </div>
+    </div>
   <section class="contactSection">
     <div class="newS p-5">
       <div class="row p-5">
@@ -46,7 +53,7 @@
                     <input type="email " name="email" class="form-control" id="exampleFormControlInput1" placeholder="Email " required>
                     <input type="number" name="contact" class="form-control" id="exampleFormControlInput1" placeholder="Cell No" min="0" required>
                     <textarea type="text" name="message" class="form-control" id="exampleFormControlTextarea1" rows="1 " placeholder="Message" required></textarea>
-                    <button type="submit" name="sendEmail" class="btn btn-secondary mt-3">Send email</button>
+                    <button type="submit" onclick="submitEmail()" name="sendEmail" class="btn btn-secondary mt-3">Send email</button>
                </form>
             </div>
         </div>
@@ -98,7 +105,7 @@
     </div>
   </footer>
     <!-- Optional JavaScript; choose one of the two! -->
-
+    <script src="./main.js"></script>
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
