--- a/Math-Aid/index.html
+++ b/Math-Aid/index.html
@@ -23,15 +23,24 @@
                 <a class="nav-link active" aria-current="page" href="/">Home</a>
                 <a class="nav-link" href="./About.html">About</a>
                 <a class="nav-link" href="./Contact.html">Contact</a>
-                <a class="nav-link " href="./Booking.html">Bookings</a>
+                <a class="nav-link " id="bookingLink" href="./Booking.html">Bookings</a>
               </ul>
               <span class="navbar-text">
-                <a type="button" href="Booksession.html" class="p-2"><i class="fa-solid fa-chalkboard-user"></i> Book Session</a>
-                <a data-bs-toggle="modal" data-bs-target="#LoginForm" type="button" class="p-2"><i class="fa-solid fa-user"></i> Login</a>
+                <a type="button" id="bookingSession" href="Booksession.html" class="p-2"><i class="fa-solid fa-chalkboard-user"></i> Book Session</a>
+                <a data-bs-toggle="modal" id="login" data-bs-target="#LoginForm" type="button" class="p-2"><i class="fa-solid fa-user"></i> Login</a>
+                <a href="/index.html" id="loginOut" onclick="logOut()" type="button" class="p-2"><i class="fas fa-sign-out"></i> Logout</a>
               </span>
             </div>
           </div>
     </nav>
+    <div class="alert alert-danger alert-dismissible fade show" id="loginAlert" role="alert">
+      <strong><i class="fas fa-frown"></i> Login error!</strong> Please enter the correct login info!
+      <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
+    <div class="alert alert-success alert-dismissible fade show" id="loginSuccess" role="alert">
+      <strong><i class="fas fa-smile"></i> Login success!</strong> Welcome
+      <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
     <section id="Main-section">
         <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner" >
@@ -40,21 +49,21 @@
                 <div class="carousel-caption text-center">
                   <h1 class="mainTitle">Helping young South African to excel in Maths</h1>
                   <br>
-                  <a href="./About" class="btn btn-light text-dark">Learn More</a>
+                  <a href="./About.html" class="btn btn-light text-dark">Learn More</a>
                 </div>
               </div>
               <div class="carousel-item">
                 <img src="./pictures/2.png" class="mainImg">
                 <div class="carousel-caption">
                   <h1 class="mainTitle">Helping young South African to excel in Maths</h1>
-                  <a href="./About" class="btn btn-light text-dark">Learn More</a>
+                  <a href="./About.html" class="btn btn-light text-dark">Learn More</a>
                 </div>
               </div>
               <div class="carousel-item">
                 <img src="./pictures/3.png" class="mainImg">
                 <div class="carousel-caption">
                   <h1 class="mainTitle">Helping young South African to excel in Maths</h1>
-                  <a href="./About" class="btn btn-light text-dark">Learn More</a>
+                  <a href="./About.html" class="btn btn-light text-dark">Learn More</a>
                 </div>
               </div>
             </div>
@@ -117,12 +126,12 @@
               <div>
                   <h3 class="text-dark p-2">Login</h3>
               </div>
-              <form method="post">
-                   <input type="email " name="email" class="form-control" id="exampleFormControlInput1" placeholder="Email " required>
-                   <textarea type="password" name="password" class="form-control" id="exampleFormControlTextarea1" rows="1 " placeholder="password" required></textarea>
-                   <button type="submit" name="sendEmail" class="btn btn-secondary mt-3 w-50">Login</button><br>
+              <div>
+                   <input type="email" id="email" class="form-control" placeholder="Email" required>
+                   <input type="password" id="password" class="form-control"  placeholder="password" required>
+                   <button onclick="login()" name="email" class="btn btn-secondary mt-3 w-50" data-bs-dismiss="modal" aria-label="Close">Login</button><br>
                    <a class="text-secondary p-2" href="./Signup.html"><small>Sign in</small></a>
-              </form>
+              </div>
            </div>
           </div>
         </div>
@@ -130,7 +139,7 @@
     </div>
 
     <!-- Optional JavaScript; choose one of the two! -->
-
+    <script src="./main.js"></script>
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
